--- a/src/freenet/clients/http/staticfiles/themes/sky/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/sky/layout.css
@@ -24,94 +24,9 @@
  * Navigation
  */
 
-div#navbar {
-	float: left;
-	margin: 0px;
-	padding: 0px;
-	position: relative;
-	left: 10px;
-	top: 10px;
-	width: 155px;
-}
-
-div#navbar, div#selected-subnavbar {
-	border-width: 1px;
-	border-style: solid;
-	margin: 0px;
-}
-
-div#navbar a {
-	text-decoration: none;
-	display: block;
-	padding: 0px;
-	padding-left: 1em;
-	padding-right: 5px;
-	padding-top: 5px;
-}
-
-ul#navlist li a {
+/*matches both top-level and submenu links */
+#navlist li {
 	font-weight: bold;
-}
-
-ul#navlist li ul a,
-ul#selected-subnavbar-list li a {
-	font-weight: normal;
-}
-
-div#navbar ul,
-div#navbar ul li ul {
-	list-style-type: none;
-	padding: 0;
-	margin: 0;
-}
-
-div#navbar ul li ul {
-	margin-left: 1.5em;
-}
-
-div#navbar ul#navlist li.navlist-selected ul li a,
-div#navbar ul#navlist li ul li a {
-	font-size: 0.9em;
-}
-
-/* this border is only displayed in dropdown mode */
-
-ul.subnavlist-selected,
-ul.subnavlist {
-	border-width: 1px;
-	border-style: solid;
-}
-
-/* the subnavbar is only displayed in top mode */
-
-#selected-subnavbar {
-	border-top-width: 0px !important;
-	padding: 0;
-	position: relative;
-	top: 0px;
-}
-
-#selected-subnavbar ul {
-	margin: 0;
-	padding: 0;
-	width: 100%;
-	display: table;
-	border-collapse: collapse;
-	border: none;
-}
-
-#selected-subnavbar li {
-	display: table-cell;
-	list-style-type: none;
-	margin: 0px;
-	text-align: center;
-}
-
-#selected-subnavbar a {
-	text-decoration: none;
-	display: block;
-	width: 100%;
-	height: 100%;
 }
 
 /*
@@ -169,11 +84,10 @@ li.alert-summary-text-minor {
  */
 
 #content {
-	margin: 10px;
-	padding: 0;
-	padding-bottom: 2em;
+	margin-top: 10px;
 	position: absolute;
-	left: 167px;
+	left: 185px;
+	right: 10px;
 }
 
 .interfacelink {
