--- a/src/freenet/clients/http/staticfiles/themes/clean/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/clean/layout.css
@@ -37,31 +37,8 @@ div#navbar {
  */
 
 div.infobox {
-	border-style: solid;
-	border-width: 1px;
-	margin: 0 0 5px 0;
-	padding: 10px;
+	margin-bottom: 0.333em;
 }
-
-div.infobox-header {
-	background-position: right;
-	background-repeat: no-repeat;
-	border-bottom-style: dotted;
-	border-bottom-width: 1px;
-	margin: -10px -10px 10px -10px;
-	padding: 10px 35px 10px 10px;
-}
-
-/* FIXME I'm not sure why span.search-title-label exists at all. It would be better
- * to put the text directly into the parent div and add a "search-title-label"
- * class to that. This rule is necessary because the span isn't going to
- * inherit font information from its parent because of a rule we set up a 
- * long time ago that can't be changed without breaking other things. */
-
-div.infobox-header, span.search-title-label {
-	font-weight: bold;
-}
-
 
 div.infobox-information div.infobox-header {
 	background-image: url(/static/themes/clean/information.png);
@@ -87,25 +64,20 @@ div.infobox-success div.infobox-header {
 	background-image: url(/static/themes/clean/success.png);
 }
 
-ul.alert-summary {
-	list-style-type: none;
-	text-indent: 20px;
-}
-
 li.alert-summary-text-error {
-	background: url(/static/themes/clean/error-16.png) left center no-repeat;
+	background-image: url(/static/themes/clean/error-16.png);
 }
 
 li.alert-summary-text-alert {
-	background: url(/static/themes/clean/alert-16.png) left center no-repeat;
+	background-image: url(/static/themes/clean/alert-16.png);
 }
 
 li.alert-summary-text-warning {
-	background: url(/static/themes/clean/warning-16.png) left center no-repeat;
+	background-image: url(/static/themes/clean/warning-16.png);
 }
 
 li.alert-summary-text-minor {
-	background: url(/static/themes/clean/information-16.png) left center no-repeat;
+	background-image: url(/static/themes/clean/information-16.png);
 }
 
 /*
