--- a/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
@@ -99,23 +99,7 @@ ul.subnavlist {
 
 div.infobox {
 	border-style: dotted;
-	border-width: 1px;
-	margin: 0 0 10px 0;
-	padding: 10px;
 }
-
-div.infobox div.infobox-header {
-	background-position: right;
-	background-repeat: no-repeat;
-	border-bottom-style: dotted;
-	border-bottom-width: 1px;
-	font-family: verdana;
-	font-size: 10pt;
-	font-weight: bold;
-	margin: -10px -10px 10px -10px;
-	padding: 10px 35px 10px 10px;
-}
-
 
 div.infobox-information div.infobox-header {
 	background-image: url(/static/themes/grayandblue/information.png);
@@ -141,25 +125,20 @@ div.infobox-success div.infobox-header {
 	background-image: url(/static/themes/grayandblue/success.png);
 }
 
-ul.alert-summary {
-	list-style-type: none;
-	text-indent: 20px;
-}
-
 li.alert-summary-text-error {
-	background: url(/static/themes/grayandblue/error-16.png) left center no-repeat;
+	background-image: url(/static/themes/grayandblue/error-16.png);
 }
 
 li.alert-summary-text-alert {
-	background: url(/static/themes/grayandblue/alert-16.png) left center no-repeat;
+	background-image: url(/static/themes/grayandblue/alert-16.png);
 }
 
 li.alert-summary-text-warning {
-	background: url(/static/themes/grayandblue/warning-16.png) left center no-repeat;
+	background-image: url(/static/themes/grayandblue/warning-16.png);
 }
 
 li.alert-summary-text-minor {
-	background: url(/static/themes/grayandblue/information-16.png) left center no-repeat;
+	background-image: url(/static/themes/grayandblue/information-16.png);
 }
 
 /*
