--- a/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
@@ -146,20 +146,7 @@ li.alert-summary-text-minor {
  */
 
 #content {
-	margin-top: 10px;
-	position: absolute;
-	left: 160px;
-	right: 10px;
-}
-
-.interfacelink {
-	text-decoration: underline;
-}
-
-#activity {
-	margin: 0;
-	padding: 0;
-	list-style: none;
+	left: 11.626em;
 }
 
 /*
