--- a/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
@@ -23,10 +23,12 @@ td,
 th {
 	font-family: Verdana;
 	font-size: 10pt;
-}*/
+}
 
+table,
 td,
-th {
+th,
+thead {
 	border-style: dotted;
 }
 
@@ -152,20 +154,6 @@ li.alert-summary-text-minor {
 /*
  * Plugins Page
  */
-
-table.plugins td,
-table.plugins th {
-	font-size: 8pt;
-}
-
-table.plugins span {
-	font-weight: bold;
-	font-size: 8pt;
-}
-
-table.plugins form {
-	display: inline;
-}
 
 /* 
  * Configuration Page
