--- a/src/freenet/clients/http/staticfiles/themes/sky/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/sky/layout.css
@@ -73,53 +73,10 @@ li.alert-summary-text-minor {
  * Configuration Page
  */
 
-table.config_navigation {
-	list-style-type: none;
-	margin-top: 10px;
-}
-
-ul.config {
-	border-style: solid;
-	border-width: 1px;
-	margin: 0 0 5px 0;
-	padding: 0;
-}
-
 ul.config li {
-	list-style: none;
-	margin: 5px;
-	padding: 5px;
-	text-align: left;
-}
-
-ul.config span.configprefix {
-	display: block;
-	font-size: 16pt;
-	font-weight: bold;
-	text-indent: 15px;
-	width: 100%;
-}
-
-ul.config span.configshortdesc {
-	display: block;
-	float: left;
-	font-weight: bold;
-	margin-right: 10px;
-	text-align: left;
-	width: 30%;
-}
-
-ul.config span.configlongdesc {
-	display: block;
-	clear: left;
-}
-
-ul.config input[type=text] {
-	width: 67%;
-}
-
-span.config {
-	width: 70%;
+	border: none;
+	margin: 0.667em;
+	padding: 0.333em;
 }
 
 /* 
