--- a/src/freenet/clients/http/staticfiles/themes/sky/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/sky/layout.css
@@ -87,94 +87,12 @@ ul.config li {
  * Statistics Page
  */
 
-div.peercircle {
-  margin: 0 auto;
-}
-
-div.peercircle span.me {
-  font-weight: bold;
-}
-
-div.peercircle span.connected {
-  font-weight: bold;
-}
-
-div.peercircle span.backed_off {
-  font-weight: bold;
-}
-
-div.peercircle span.disconnected {
-  font-weight: bold;
-}
-
-div.histogramLabel {
-  margin-left: 3px;
-  margin-right: 3px;
-  font-size: 60%;
-}
-
 /* 
  * Queue Page
  */
 
-table.queue td,
-table.queue th {
-	font-size: 8pt;
-}
-
-div.queue_tabletitle {
-	margin: 0;
-	padding: 10px 0 10px 0;
-	font-size: 10pt;
-}
-
-table.queue span {
-	font-size: 8pt;
-}
-
-div.progressbar {
-	border-style: solid;
-	border-width: 1px;
-	float: left;
-	height:15px;
-	margin: 0px;
-	margin-right: 3px;
-	width: 130px;
-}
-
-div.progressbar-done {
-	float: left;
-	height:15px;
-}
-
-div.progressbar-min {
-	float: left;
-	height:15px;
-}
-
-div.progressbar-failed {
-	float: left;
-	height:15px;
-}
-
-div.progressbar-failed2 {
-	float: left;
-	height:15px;
-}
-
-/* Node to node text message */
-
-#n2ntmtext {
-	width: 100%;
-}
-
-#n2nbox input[type=submit] {
-	width: 100%;
-}
-
-div.n2ntm-message-text {
-	margin: 10px;
-	padding: 10px;
+div.progress_fraction_finalized {
+	font-weight: normal;
 }
 
 /* 
