--- a/src/freenet/clients/http/staticfiles/common_includes.css
+++ b/src/freenet/clients/http/staticfiles/common_includes.css
@@ -1,5 +1,5 @@
 ﻿/* Basic CSS functions */
-@import url(/static/base.css);
+@import url(/static/base-old.css);
 
 /* Bookmarks & bookmark editor */
 @import url(/static/bookmark.css);
