--- a/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
+++ b/src/freenet/clients/http/staticfiles/themes/grayandblue/layout.css
@@ -57,11 +57,11 @@ form {
  * Navigation
  */
 
-div#navbar {
+#navbar {
 	width: 10.125em;
 }
 
-div#navbar, div#selected-subnavbar {
+#navbar, #selected-subnavbar {
 	border-style: dotted;
 }
 
@@ -171,6 +171,10 @@ li.alert-summary-text-minor {
 div.progress_fraction_finalized {
 	font-weight: normal;
 }
+
+/* 
+ * N2NTM page
+ */
 
 /* 
  * Translation
