--- a/src/freenet/clients/http/staticfiles/themes/grayandblue/color.css
+++ b/src/freenet/clients/http/staticfiles/themes/grayandblue/color.css
@@ -5,10 +5,6 @@
  * Overall Settings
  */
 
-th {
-	background-color: #e8e8e8;
-}
-
 td,
 th {
 	border-color: #676767;
@@ -34,20 +30,20 @@ body {
  * Navigation
  */
 
-div#navbar,
-div#selected-subnavbar {
+#navbar,
+#selected-subnavbar {
 	border-color: #676767;
 }
 
-div#navbar,
-ul#navlist,
+#navbar,
+#navlist,
 li.navlist-selected,
 li.navlist-not-selected,
 ul.subnavlist-selected,
 ul.subnavlist,
 li.submenuitem-selected,
 li.submenuitem-not-selected,
-div#subnavbar {
+#subnavbar {
 	background-color: #eeeeee;
 }
 
@@ -55,7 +51,6 @@ div#subnavbar {
 
 li.navlist-selected a,
 li.submenuitem-selected a {
-	background-color: inherit;
 	color: #005f9c;	
 }
 
@@ -72,7 +67,6 @@ li.navlist-not-selected a {
 }
 
 li.navlist-not-selected a:hover {
-	background-color: #dddddd;
 	color: #0089e1;
 }
 
@@ -84,7 +78,6 @@ li.submenuitem-selected a:hover {
 }
 
 li.submenuitem-selected a {
-	background-color: inherit;
 	color: #0089e1;
 }
 
@@ -107,36 +100,20 @@ ul.subnavlist {
 	border-color: #676767;
 }
 
-/* the subnavbar is only displayed in top mode */
-
 /*
  * Alerts
  */
-
-.alert-error {
-	color: darkred;
-}
-
-.alert-warning {
-	color: blue;
-}
-
-.alert-minor {
-	color: green;
-}
 
 /* 
  * Infoboxes
  */
 
 div.infobox {
-	background-color: #f0f0f0;
 	border-color: #676767;
 }
 
 div.infobox div.infobox-header {
 	color: #000000;
-	border-bottom-color: #a0a0a0;
 	background-color: #eee;
 }
 
@@ -146,30 +123,6 @@ div.infobox-information div.infobox-header {
 
 div.infobox-warning div.infobox-header {
 	background-color: #eee;
-}
-
-div.infobox-alert {
-	background-color: #f0e8e8;
-}
-
-div.infobox-alert div.infobox-header {
-	background-color: #ffd0d0;
-}
-
-div.infobox-error {
-	background-color: #f0e8e8;
-}
-
-div.infobox-error div.infobox-header {
-	background-color: #ffd0d0;
-}
-
-div.infobox-query div.infobox-header {
-	background-color: #f0f0e8;
-}
-
-div.infobox-success div.infobox-header {
-	background-color: #e8f0e8;
 }
 
 /*
@@ -188,10 +141,6 @@ a:hover {
 	background-color: #eeeeee;
 }
 
-.interfacelink {
-	color: #000000;
-}
-
 /*
  * Plugins Page
  */
@@ -200,28 +149,9 @@ a:hover {
  * Configuration Page
  */
 
-ul.config {
-	border-top-color: #d0d0d0;
-	border-right-color: #d0d0d0;
-	border-left-color: #d0d0d0;
-}
-
-ul.config li {
-	border-bottom-color: #d0d0d0;
-}
-
-ul.config {
-	border-bottom-color: #a0a0a0;
-	background-color: #e8e8e8;
-}
-
 /* 
  * Darknet Page
  */
-
-span.peer_connected {
-	color: #008000;
-}
 
 span.peer_backed_off {
 	color: #ff0000;
@@ -229,10 +159,6 @@ span.peer_backed_off {
 
 span.peer_too_new {
 	color: #d0a0a0;
-}
-
-span.peer_too_old {
-	color: #d0a0d0;
 }
 
 span.peer_disconnected {
@@ -271,84 +197,16 @@ span.peer_idle_old {
 	color: #0089e1;
 }
 
-tr.darknet_connections_warning {
-	background-color: #ffff00;
-}
-
 /* 
  * Statistics Page
  */
-
-div.peercircle span.mark {
-  color: #d0d0d0;
-}
-
-div.peercircle span.me {
-  color: #0080ff;
-}
-
-div.peercircle span.connected {
-  color: #008000;
-}
-
-div.peercircle span.backed_off {
-  color: #008000;
-}
-
-div.peercircle span.disconnected {
-  color: #d0d0d0;
-}
-
-div.histogramConnected {
-  background-color: #008000;
-}
-
-div.histogramDisconnected {
-  background-color: #d0d0d0;
-}
 
 /* 
  * Queue Page
  */
 
-table.queue span.failure_reason_unknown {
-	color: #d0d0d0;
-}
-
-table.queue span.progress_fraction_unknown {
-	color: #d0d0d0;
-}
-
 table.queue span.progress_fraction_finalized {
 	color: #008000;
-}
-
-table.queue span.filename_direct {
-	color: #d0d0d0;
-}
-
-table.queue span.filename_none {
-	color: #d0d0d0;
-}
-
-table.queue span.persistence_reboot {
-	color: #0000ff;
-}
-
-table.queue span.persistence_forever {
-	color: #00b000;
-}
-
-table.queue span.mimetype_unknown {
-	color: #d0d0d0;
-}
-
-table.queue span.filesize_unknown {
-	color: #d0d0d0;
-}
-
-table.queue span.key_unknown {
-	color: #d0d0d0;
 }
 
 .progressbar {
@@ -400,25 +258,9 @@ tr.priority6, td.priority6 {
 	background-color: transparent;
 }
 
-div.n2ntm-message-text {
-	background-color: #ffffff;
-}
-
-td.n2ntm-send-sent {
-	background-color: #a7ffbc;
-}
-
-td.n2ntm-send-delayed {
-	background-color: #ffeba7;
-}
-
-td.n2ntm-send-queued {
-	background-color: #ffa7a7;
-}
-
-td.n2ntm-send-failed {
-	background-color: #ffb7b7;
-}
+/* 
+ * N2NTM page
+ */
 
 /* 
  * Translation
@@ -431,25 +273,19 @@ td.n2ntm-send-failed {
 /* 
  * Statusbar
  */
-
-div#statusbar-container {
+#statusbar-container {
 	border-color: #676767;
 	background-color: #eee;
 }
 
-div#statusbar div.progressbar {
-	background-color: transparent;
-}
-
-div#statusbar div.separator {
+#statusbar div.separator {
 	border-left-color: #676767;
 }
 
-div#statusbar div.progressbar div.progressbar-peers.very-few-peers,
-div#statusbar div.progressbar div.progressbar-peers.few-peers,
-div#statusbar div.progressbar div.progressbar-peers.avg-peers,
-div#statusbar div.progressbar div.progressbar-peers.full-peers {
-
-  background-color: transparent;
+#statusbar div.progressbar-peers.very-few-peers,
+#statusbar div.progressbar-peers.few-peers,
+#statusbar div.progressbar-peers.avg-peers,
+#statusbar div.progressbar-peers.full-peers {
+  background-color: transparent !important;
 }
 
