--- a/src/freenet/clients/http/staticfiles/behavior-top.css
+++ b/src/freenet/clients/http/staticfiles/behavior-top.css
@@ -55,3 +55,7 @@ li.navlist-not-selected {
 	text-align: center !important;
 }
 
+/* topbar bottom border conflicts with navbar top */
+#topbar {
+	border-bottom: none !important;
+}
