--- a/src/freenet/clients/http/staticfiles/themes/boxed-classic/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/boxed-classic/theme.css
@@ -1,7 +1,7 @@
-/* boxed theme */
+/* boxed-classic theme */
 
 /* navigation behavior */
-@import url(/static/behavior-dynamic.css);
+@import url(/static/behavior-classic.css);
 
 /* layout */
 @import url(/static/themes/boxed/layout.css);
