--- a/src/freenet/clients/http/staticfiles/themes/boxed-dropdown/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/boxed-dropdown/theme.css
@@ -1,7 +1,7 @@
-/* boxed theme */
+/* boxed-dropdown theme */
 
 /* navigation behavior */
-@import url(/static/behavior-dynamic.css);
+@import url(/static/behavior-dropdown.css);
 
 /* layout */
 @import url(/static/themes/boxed/layout.css);
