--- a/src/freenet/clients/http/staticfiles/themes/boxed-dynamic/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/boxed-dynamic/theme.css
@@ -1,7 +1,7 @@
-/* boxed top */
+/* boxed theme */
 
 /* navigation behavior */
-@import url(/static/behavior-top.css);
+@import url(/static/behavior-dynamic.css);
 
 /* layout */
 @import url(/static/themes/boxed/layout.css);
