Fix backwards compatibility
Some of the non-modularized themes were broken by recent updates. minimalistblue
minimalist and rabbit-hole now work the way they did before.

--- a/src/freenet/clients/http/staticfiles/themes/minimalblue/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/minimalblue/theme.css
@@ -1,7 +1,13 @@
 ﻿/* minimalblue */
 
 /* Basic CSS functions */
-@import url(/static/common_includes.css);
+@import url(/static/base-old.css);
+
+/* Bookmarks & bookmark editor */
+@import url(/static/bookmark.css);
+
+/* Status bar style & colors */
+@import url(/static/statusbar.css);
 
 /* minimal blue overall settings */
 
