--- a/src/freenet/clients/http/staticfiles/themes/rabbit-hole/theme.css
+++ b/src/freenet/clients/http/staticfiles/themes/rabbit-hole/theme.css
@@ -1,7 +1,7 @@
 ﻿/* rabbit-hole */
 
 /* Basic CSS functions */
-@import url(/static/base.css);
+@import url(/static/base-old.css);
 
 /* Bookmarks & bookmark editor */
 @import url(/static/bookmark.css);
